tests/snapshots/run_wpt_conformance__litert_reduceL2_float32_1D_constant_tensor_empty_axes.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
reduce_l2.https.any.js reduceL2 float32 1D constant tensor empty axes, litert
 reduce_l2 :: reduceL2 float32 1D constant tensor empty axes: index 0: actual=-4.860228 expected=4.860228 ulp=2167868922 tolerance=16
  inputs: reduceL2Input: [-4.860228061676025, 4.860228061676024] (constant)
  expected reduceL2Output: [4.860228, 4.860228]
  actual reduceL2Output: [-4.860228, 4.860228]
  expected reduceL2Output full nd:
(shape [2])
[4.860228, 4.860228]
  actual reduceL2Output full nd:
(shape [2])
[-4.860228, 4.860228]

--- built graph ---
webnn_graph "graph" v2 {
  consts {
    operand_0: f32[2] @bytes([253, 134, 155, 192, 253, 134, 155, 64]);
  }

  nodes {
    [reduceL2Output] = reduceL2(operand_0, axes=[], keepDimensions=false, label="");
  }

  outputs { reduceL2Output; }
}
